bugfix: make sure the section doesn't get squished by the others

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -153,6 +153,7 @@ input {
   justify-content: space-between;
   padding-bottom: 16px;
   padding-top: 16px;
+  flex: 0 0 auto;
 }
 
 #editor {
